fix: add tsvb table scrollbars

--- a/src/legacy/core_plugins/metrics/public/components/vis_types/_vis_types.scss
+++ b/src/legacy/core_plugins/metrics/public/components/vis_types/_vis_types.scss
@@ -3,4 +3,6 @@
   flex-direction: column;
   flex: 1 1 100%;
   padding: $euiSizeS;
+  @include euiScrollBar;
+  overflow: auto;
 }
